[package]
name = "keyhog-core"
description = "keyhog-core: shared data model and detector specifications for the KeyHog secret scanner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/santhreal/keyhog"
homepage = "https://github.com/santhreal/keyhog"
documentation = "https://docs.rs/keyhog-core"
keywords = ["secret-scanner", "security", "credentials", "api-keys", "git"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
# Defensive: exclude the runtime-generated parse cache so a developer
# who forgot to `git clean` between scans can't ship a stale cache to
# crates.io. The .gitignore covers this for committed state; this
# covers `cargo package`.
exclude = ["detectors/.keyhog-cache.json"]

[package.metadata.santh]
status = "alpha"

[dependencies]
# SECURITY: security-critical deps are pinned to exact versions
# matching the workspace, not floating `"1"` / `"0.10"`. A floating
# spec lets a backdoored patch release land via `cargo update`
# without any review. kimi-19 supply-chain audit, 2026-05-23.
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = "=1.12.3"
regex-syntax = { workspace = true }
sha2 = { workspace = true }
rayon = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
async-trait = { workspace = true }
serde_with = { workspace = true }
parking_lot = { workspace = true }
indexmap = { workspace = true }
fs2 = { workspace = true }
ahash = { workspace = true }
# `pure` forces the portable Rust implementation and drops blake3's C/assembly
# build script, which fails on the macos-latest (arm64) CI runner and on any
# cross/portable build without a target C toolchain. blake3 here only hashes
# files for the incremental merkle cache (cold path, not the scan hot loop), so
# the pure-Rust speed cost is irrelevant while the build becomes target-agnostic.
blake3 = { version = "=1.8.5", features = ["pure"] }
dirs = { workspace = true }
zeroize = { version = "=1.8.2", features = ["derive"] }
anyhow = "=1.0.103"
# Used for atomic-rename writes of `merkle.idx` and `calibration.json`
# via `NamedTempFile::persist()`. The Drop impl deletes the tmp on
# panic between create and rename, so a partial save doesn't leak a
# stale `tmp.NNN` next to the real cache file.
tempfile = { workspace = true }
# `vyre_libs::rule` for the declarative `.keyhogignore.toml` engine
# (see `crates/core/src/rule_filter.rs`). Pulls in the `rule`
# feature which compiles the CPU evaluator + the `regex` dep used
# by `RuleCondition::RegexMatch`.
vyre_libs = { workspace = true, features = ["rule"] }
smallvec = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
quick-xml = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
