[package]
name = "keyhog-scanner"
description = "keyhog-scanner: high-performance SIMD-accelerated secret detection engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/santhsecurity/keyhog"
homepage = "https://github.com/santhsecurity/keyhog"
documentation = "https://docs.rs/keyhog-scanner"
keywords = ["secret-scanner", "security", "credentials", "api-keys", "git"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[package.metadata.santh]
status = "alpha"

[features]
# Default = full desktop experience: GPU stack + Hyperscan + SIMD prefilter +
# every ML/decode/multiline data path. Strip with `--no-default-features
# --features ci` to drop the GPU drivers and Hyperscan for a maximally-light
# CI binary (no libhs link, no wgpu/Vulkan probe, ~150ms cold-start).
default = ["ml", "entropy", "decode", "multiline", "simdsieve", "simd", "gpu"]
# Lean CI aggregator build: every default detection/data feature (Hyperscan +
# SIMD prefilter + ML/decode/multiline) EXCEPT the GPU dispatch stack. The
# integration-tests job runs the real detection path on GPU-less runners, so
# the GPU dispatch suites (`#![cfg(feature = "gpu")]`) compile out and run only
# on runners-nightly (which builds with `--features gpu` on real GPU hosts).
ci-lean = ["ml", "entropy", "decode", "multiline", "simdsieve", "simd"]
ml = []
entropy = []
decode = []
multiline = []
simd = ["dep:hyperscan"]  # Vectorscan/Hyperscan SIMD regex compilation (builds HS database)
simd_scan = ["simd"]      # Enable SIMD scan path (experimental — AC+fallback is faster for <2K patterns)
simdsieve = ["dep:simdsieve"]  # SIMD-accelerated prefilter for top 8 patterns (50 GB/s)
# GPU dispatch stack: wgpu cross-platform driver (+ pollster/bytemuck), the
# vyre wgpu driver, the vyre runtime megakernel, and on Linux the vyre CUDA
# driver. cudarc still loads libcuda/libnvrtc DYNAMICALLY at runtime so a
# `gpu`-on build that lands on a driverless host falls back to wgpu and a
# driverless+adapter-less host falls all the way back to the CPU path. Turning
# the feature OFF removes wgpu/vulkan/EGL linkage entirely — the lean CI
# path. `vyre`/`vyre_libs` stay on either way because their CPU primitives
# are woven into the scan types.
#
# `gpu` IMPLIES `simd`: the megakernel dispatch path reuses the SIMD prefilter
# for its phase-2 no-hit tail (see megakernel_dispatch.rs and scan.rs
# `scan_coalesced_phase2`). A gpu-without-simd build would leave the entire
# megakernel stack dead — there is no coherent GPU detection path without the
# SIMD tail, so the combination is disallowed at the feature level rather than
# silently degraded.
gpu = [
    "simd",
    "dep:wgpu",
    "dep:pollster",
    "dep:bytemuck",
    "dep:vyre-driver-wgpu",
    "dep:vyre-runtime",
    "dep:vyre-driver-cuda",
    # Persistent batch megakernel: the DFA rule-catalog dispatcher
    # (BatchDispatcher / FileBatch / HitRecord) on both the runtime and the wgpu
    # driver. This is the on-GPU detection path (see docs/EXECUTION_PLAN.md).
    "vyre-driver-wgpu/megakernel-batch",
]
# CUDA acquisition lives inside the `gpu` feature and is exercised on Linux
# via cudarc `dynamic-loading` so the same `gpu` build works with or without a
# CUDA toolkit at install time. This `cuda` alias is retained as a no-op for
# legacy `--features cuda` invocations.
cuda = ["gpu"]

[dependencies]
keyhog-core = { workspace = true }
# GPU stack — optional, gated by the `gpu` feature so the lean CI build does
# not link wgpu and does not probe Vulkan/EGL at startup. `vyre`/`vyre_libs`
# are kept unconditional because their CPU primitives (LiteralMatch,
# GpuLiteralSet, RulePipeline) are woven into the scan types.
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
aho-corasick = { workspace = true }
regex = { workspace = true }
# AST-walking literal extraction (compiler_prefix.rs).
regex-syntax = { workspace = true }
base64 = { workspace = true }
unicode-normalization = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
memchr = { workspace = true }
rayon = { workspace = true }
lru = { workspace = true }
lazy_static = { workspace = true }
dirs = { workspace = true }
libc = { workspace = true }
zeroize = { workspace = true }
hyperscan = { workspace = true, optional = true }
vyre = { workspace = true }
vyre_libs = { workspace = true, features = ["matching-nfa", "matching-regex", "intern"] }
vyre-driver-wgpu = { workspace = true, optional = true }
vyre-runtime = { workspace = true, optional = true, features = ["megakernel-batch"] }

simdsieve = { workspace = true, optional = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
# Fast (AES/SIMD-mixed) hasher for the frozen detector-metadata interner. The
# per-match `StaticInterner::lookup` hot path replaces vyre's CHD perfect-hash
# (two seeded FNV-1a passes + an xxHash verify + a full string compare = four
# whole-key traversals per field) with a SINGLE ahash pass over the key. ahash
# processes the key in 8-byte words with hardware mix ops instead of one
# function call per byte, collapsing the per-lookup cost to ~one cheap hash +
# one compare while returning the identical pre-allocated `Arc<str>`
# (PERF-locality_intern-1).
ahash = "=0.8.12"
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["rt", "time"] }
base64-simd = "0.8.0"
hex-simd = "0.8.0"
# Used for atomic-rename of the Hyperscan database cache via
# `NamedTempFile::persist()` — see `simd.rs::HsScanner::compile`.
# The Drop impl deletes the tmp on panic between create and rename.
tempfile = { workspace = true }
# Parses the embedded Tier-B disclaimer-phrase data file
# (`data/disclaimer-phrases.toml`) at first use of
# `context::false_positive::has_disclaimer_comment`. Tier-B is the
# moat: shipping data as TOML lets the community PR new phrases
# without touching Rust.
toml = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { workspace = true }
# CUDA is the primary GPU backend on Linux when the `gpu` feature is on. The
# crate loads libcuda/libnvrtc dynamically at runtime (cudarc dynamic-loading)
# so a `gpu`-on build with no CUDA toolkit installed still compiles and a
# driverless host falls back to wgpu. macOS / Windows never compile CUDA.
vyre-driver-cuda = { workspace = true, optional = true, features = ["cuda"] }

# Optional: Vectorscan SIMD backend

[dev-dependencies]
chrono = { workspace = true }
criterion = { workspace = true }
keyhog-verifier = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
md5 = "0.7"
# `toml` moved to [dependencies] for the Tier-B disclaimer-phrase
# loader in src/context/false_positive.rs.

[[bench]]
name = "gpu_vs_hs_8mib"
harness = false

[[bench]]
name = "scan_throughput"
harness = false

[[bench]]
name = "size_pattern_sweep"
harness = false

[[bench]]
name = "adversarial"
harness = false

[[test]]
name = "prefilter_robustness_proptest"
path = "tests/property/prefilter_robustness_proptest.rs"

[[test]]
name = "cross_detector_corpus_proptest"
path = "tests/property/cross_detector_corpus_proptest.rs"

[[test]]
name = "execution_plan_hunt_inventory"
path = "tests/gap/execution_plan_hunt_inventory.rs"

[[test]]
name = "gpu_tests_fail_not_skip"
path = "tests/gap/gpu_tests_fail_not_skip.rs"

# TARGET-SPEC perf worklist (FAILING-BY-DESIGN): the 10x goal expressed as
# executable contracts. RED until batched-GPU phase-2 verify lands; each red
# line is one tracked gap. Subdir files need explicit [[test]] paths to be
# discovered as their own test binaries (same wiring as the property/* tests).
[[test]]
name = "target_spec_perf_10x_fullscan"
path = "tests/target_spec/perf_10x_fullscan.rs"

[[test]]
name = "target_spec_perf_10x_phase2_batch"
path = "tests/target_spec/perf_10x_phase2_batch.rs"

[[test]]
name = "target_spec_perf_10x_backend_matrix"
path = "tests/target_spec/perf_10x_backend_matrix.rs"

# TARGET-SPEC recall worklist (FAILING-BY-DESIGN): the candidate-GENERATION gap
# expressed as executable contracts — prefix-free real-world secret shapes the
# shipped scanner does not surface. RED until keyword/shape generation lands;
# each red is one tracked recall miss (Law 6). Subdir file needs an explicit
# [[test]] path to be discovered as its own test binary.
[[test]]
name = "target_spec_recall_generation_gap"
path = "tests/target_spec/recall_generation_gap.rs"
