[package]
name = "keyhog-scanner"
description = "keyhog-scanner: high-performance SIMD-accelerated secret detection engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/santhreal/keyhog"
homepage = "https://github.com/santhreal/keyhog"
documentation = "https://docs.rs/keyhog-scanner"
keywords = ["secret-scanner", "security", "credentials", "api-keys", "git"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[package.metadata.santh]
status = "alpha"

[features]
# Default = full desktop experience: GPU stack + Hyperscan + SIMD prefilter +
# every ML/decode/multiline data path. Build the GPU-less CI binary with
# `--no-default-features --features ci-lean`: it drops ONLY the wgpu/Vulkan GPU
# dispatch stack (no adapter probe) while keeping Hyperscan + simdsieve + all
# ML/decode/multiline data paths, so detection recall is identical. To also drop
# the libhs link entirely, omit `simd`/`simdsieve` (e.g. `--no-default-features
# --features ml,entropy,decode,multiline`); `entropy` is required to compile.
default = ["ml", "entropy", "decode", "multiline", "simdsieve", "simd", "gpu"]
# Lean CI aggregator build: every default detection/data feature (Hyperscan +
# SIMD prefilter + ML/decode/multiline) EXCEPT the GPU dispatch stack. The
# integration-tests job runs the real detection path on GPU-less runners, so
# the GPU dispatch suites (`#![cfg(feature = "gpu")]`) compile out and run only
# on runners-nightly (which builds with `--features gpu` on real GPU hosts).
ci-lean = ["ml", "entropy", "decode", "multiline", "simdsieve", "simd"]
ml = []
entropy = ["dep:tiktoken-rs"]
decode = ["dep:aes", "dep:md5"]
multiline = []
simd = ["dep:hyperscan"]  # Vectorscan/Hyperscan SIMD regex compilation (builds HS database)
simdsieve = ["dep:simdsieve"]  # SIMD-accelerated prefilter for top 8 patterns (50 GB/s)
# GPU dispatch stack: wgpu cross-platform driver (+ pollster/bytemuck), VYRE's
# GPU literal-set region-presence runtime, and on Linux the VYRE CUDA driver.
# cudarc still loads libcuda/libnvrtc DYNAMICALLY at runtime, while GPU
# availability and any CPU degradation are reported by the engine/autoroute
# result path instead of being hidden at feature selection time. Turning the
# feature OFF removes wgpu/vulkan/EGL linkage entirely (the lean CI path).
# `vyre`/`vyre_libs` stay on either way because their CPU primitives are woven
# into the scan types.
#
# `gpu` IMPLIES `simd`: the region-presence producer shares the coalesced
# phase-2 validation tail with SIMD (see scan_coalesced.rs
# `scan_coalesced_phase2`). A gpu-without-simd build would compile the trigger
# producer without the validation path KeyHog ships, so the combination is
# disallowed at the feature level rather than silently degraded.
gpu = [
    "simd",
    "dep:wgpu",
    "dep:pollster",
    "dep:bytemuck",
    "dep:vyre-driver-wgpu",
    "dep:vyre-runtime",
    "dep:vyre-driver-cuda",
    # VYRE's batch GPU ABI is exposed under this feature name. KeyHog's
    # production route uses the literal-set region-presence API, not the retired
    # per-rule route (see the internal design notes).
    "vyre-driver-wgpu/megakernel-batch",
]

[dependencies]
keyhog-core = { workspace = true }
flate2 = { workspace = true }
# GPU stack, optional, gated by the `gpu` feature so the lean CI build does
# not link wgpu and does not probe Vulkan/EGL at startup. `vyre`/`vyre_libs`
# are kept unconditional because their CPU primitives (LiteralMatch,
# GpuLiteralSet, RulePipeline) are woven into the scan types.
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
aho-corasick = { workspace = true }
regex = { workspace = true }
# AST-walking literal extraction (compiler_prefix.rs).
regex-syntax = { workspace = true }
base64 = { workspace = true }
aes = { workspace = true, optional = true }
md5 = { workspace = true, optional = true }
unicode-normalization = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
memchr = { workspace = true }
rayon = { workspace = true }
lru = { workspace = true }
dirs = { workspace = true }
libc = { workspace = true }
zeroize = { workspace = true }
hyperscan = { workspace = true, optional = true }
vyre = { workspace = true }
vyre_libs = { workspace = true, features = ["matching-nfa", "matching-regex", "intern"] }
vyre-driver-wgpu = { workspace = true, optional = true }
vyre-runtime = { workspace = true, optional = true, features = ["megakernel-batch"] }

simdsieve = { workspace = true, optional = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
# Fast (AES/SIMD-mixed) hasher for the frozen detector-metadata interner. The
# per-match `StaticInterner::lookup` hot path replaces vyre's CHD perfect-hash
# (two seeded FNV-1a passes + an xxHash verify + a full string compare = four
# whole-key traversals per field) with a SINGLE ahash pass over the key. ahash
# processes the key in 8-byte words with hardware mix ops instead of one
# function call per byte, collapsing the per-lookup cost to ~one cheap hash +
# one compare while returning the identical pre-allocated `Arc<str>`
# (PERF-locality_intern-1).
ahash = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["rt", "time"] }
base64-simd = { workspace = true }
hex-simd = { workspace = true }
# Used for atomic-rename of the Hyperscan database cache via
# `NamedTempFile::persist()`: see `simd.rs::HsScanner::compile`.
# The Drop impl deletes the tmp on panic between create and rename.
tempfile = { workspace = true }
# Parses the embedded Tier-B disclaimer-phrase data file
# (`data/disclaimer-phrases.toml`) at first use of
# `context::false_positive::has_disclaimer_comment`. Tier-B is the
# moat: shipping data as TOML lets the community PR new phrases
# without touching Rust.
toml = { workspace = true }
# BPE tokenizer for the entropy "rare-not-random" precision gate: tiktoken
# cl100k_base bytes-per-token separates word-like non-secrets (dotted API paths,
# English prose) from random secrets. Optional, gated by the `entropy` feature so
# non-entropy builds don't pull it. Vocab ranks are embedded (self-contained).
tiktoken-rs = { workspace = true, optional = true }

[build-dependencies]
serde_json = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { workspace = true }
# CUDA is the primary GPU backend on Linux when the `gpu` feature is on. The
# crate loads libcuda/libnvrtc dynamically at runtime (cudarc dynamic-loading)
# so a `gpu`-on build with no CUDA toolkit installed still compiles and a
# driverless host falls back to wgpu. macOS / Windows never compile CUDA.
vyre-driver-cuda = { workspace = true, optional = true, features = ["cuda"] }

# Optional: Vectorscan SIMD backend

[dev-dependencies]
chrono = { workspace = true }
criterion = { workspace = true }
keyhog-verifier = { workspace = true }
proptest = { workspace = true }
rusty-fork = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
# Validates the generated MoE WGSL (gpu_shader::moe_shader) parses + type-checks
# without needing a GPU adapter. Pinned to the version wgpu already pulls in so
# this adds no new download.
naga = { workspace = true, features = ["wgsl-in"] }
# `toml` moved to [dependencies] for the Tier-B disclaimer-phrase
# loader in src/context/false_positive.rs.

[[bench]]
name = "gpu_vs_hs_8mib"
harness = false

[[bench]]
name = "hs_vectored_candidate"
harness = false
required-features = ["simd"]

[[bench]]
name = "decode"
harness = false
required-features = ["decode"]

[[bench]]
name = "scan_throughput"
harness = false

[[bench]]
name = "size_pattern_sweep"
harness = false

[[bench]]
name = "adversarial"
harness = false

[[test]]
name = "prefilter_robustness_proptest"
path = "tests/property/prefilter_robustness_proptest.rs"

[[test]]
name = "cross_detector_corpus_proptest"
path = "tests/property/cross_detector_corpus_proptest.rs"

[[test]]
name = "entropy_simd_scalar_parity_proptest"
path = "tests/property/entropy_simd_scalar_parity_proptest.rs"

[[test]]
name = "checksum_primitives_proptest"
path = "tests/property/checksum_primitives_proptest.rs"

[[test]]
name = "hex_digest_fragment_proptest"
path = "tests/property/hex_digest_fragment_proptest.rs"

[[test]]
name = "generic_keyword_boundary_proptest"
path = "tests/property/generic_keyword_boundary_proptest.rs"

[[test]]
name = "structured_dotted_token_proptest"
path = "tests/property/structured_dotted_token_proptest.rs"

[[test]]
name = "bare_auth_value_allowed_proptest"
path = "tests/property/bare_auth_value_allowed_proptest.rs"

[[test]]
name = "hex_uuid_shape_proptest"
path = "tests/property/hex_uuid_shape_proptest.rs"

[[test]]
name = "masking_run_and_template_proptest"
path = "tests/property/masking_run_and_template_proptest.rs"

[[test]]
name = "aws_iam_arn_shape_proptest"
path = "tests/property/aws_iam_arn_shape_proptest.rs"

[[test]]
name = "path_uri_shape_proptest"
path = "tests/property/path_uri_shape_proptest.rs"

[[test]]
name = "masked_placeholder_proptest"
path = "tests/property/masked_placeholder_proptest.rs"

[[test]]
name = "serial_and_prefixed_hash_proptest"
path = "tests/property/serial_and_prefixed_hash_proptest.rs"

[[test]]
name = "english_prose_shape_proptest"
path = "tests/property/english_prose_shape_proptest.rs"

[[test]]
name = "service_hex_and_truncated_uuid_proptest"
path = "tests/property/service_hex_and_truncated_uuid_proptest.rs"

[[test]]
name = "identifier_and_markup_shape_proptest"
path = "tests/property/identifier_and_markup_shape_proptest.rs"

[[test]]
name = "decode_dos_bounds_proptest"
path = "tests/property/decode_dos_bounds_proptest.rs"

[[test]]
name = "inflate_bomb_bound_proptest"
path = "tests/property/inflate_bomb_bound_proptest.rs"

[[test]]
name = "caesar_prefix_ac_equivalence_proptest"
path = "tests/property/caesar_prefix_ac_equivalence_proptest.rs"

[[test]]
name = "path_predicate_parity_proptest"
path = "tests/property/path_predicate_parity_proptest.rs"

[[test]]
name = "phase2_truncate_boundary_proptest"
path = "tests/property/phase2_truncate_boundary_proptest.rs"

[[test]]
name = "token_randomness_cache_soundness_proptest"
path = "tests/property/token_randomness_cache_soundness_proptest.rs"

[[test]]
name = "gap_decode_pipeline_layers"
path = "tests/gap/decode_pipeline_layers.rs"

[[test]]
name = "gpu_tests_fail_not_skip"
path = "tests/gap/gpu_tests_fail_not_skip.rs"

[[test]]
name = "gap_gpu_integrity_failure_reasons"
path = "tests/gap/gpu_integrity_failure_reasons.rs"

[[test]]
name = "gap_selected_gpu_backend_executes_or_fails"
path = "tests/gap/selected_gpu_backend_executes_or_fails.rs"

[[test]]
name = "gap_gpu_no_hit_phase2_admission"
path = "tests/gap/gpu_no_hit_phase2_admission.rs"

[[test]]
name = "gap_gpu_per_chunk_dispatch_failure"
path = "tests/gap/gpu_per_chunk_dispatch_failure.rs"

[[test]]
name = "gap_gpu_phase2_empty_hit_fast_path"
path = "tests/gap/gpu_phase2_empty_hit_fast_path.rs"

[[test]]
name = "gap_gpu_phase2_unions_cpu_ac_roots"
path = "tests/gap/gpu_phase2_unions_cpu_ac_roots.rs"

[[test]]
name = "gap_gpu_require_policy_fails_not_skips"
path = "tests/gap/gpu_require_policy_fails_not_skips.rs"

[[test]]
name = "gap_gpu_shader_sigmoid_contract"
path = "tests/gap/gpu_shader_sigmoid_contract.rs"

[[test]]
name = "gap_no_inline_tests_in_src"
path = "tests/gap/no_inline_tests_in_src.rs"

[[test]]
name = "gap_gpu_moe_readback_bounded"
path = "tests/gap/gpu_moe_readback_bounded.rs"

[[test]]
name = "gap_backend_substitution_contracts"
path = "tests/gap/backend_substitution_contracts.rs"

[[test]]
name = "gap_no_inline_tests_in_a3_slice"
path = "tests/gap/no_inline_tests_in_a3_slice.rs"

# TARGET-SPEC perf worklist (FAILING-BY-DESIGN): the 10x goal expressed as
# executable contracts. RED until batched-GPU phase-2 verify lands; each red
# line is one tracked gap. Subdir files need explicit [[test]] paths to be
# discovered as their own test binaries (same wiring as the property/* tests).
[[test]]
name = "target_spec_perf_10x_fullscan"
path = "tests/target_spec/perf_10x_fullscan.rs"

[[test]]
name = "target_spec_perf_10x_phase2_batch"
path = "tests/target_spec/perf_10x_phase2_batch.rs"

[[test]]
name = "target_spec_perf_10x_backend_matrix"
path = "tests/target_spec/perf_10x_backend_matrix.rs"

# TARGET-SPEC recall worklist (FAILING-BY-DESIGN): the candidate-GENERATION gap
# expressed as executable contracts, prefix-free real-world secret shapes the
# shipped scanner does not surface. RED until keyword/shape generation lands;
# each red is one tracked recall miss (Law 6). Subdir file needs an explicit
# [[test]] path to be discovered as its own test binary.
[[test]]
name = "target_spec_recall_generation_gap"
path = "tests/target_spec/recall_generation_gap.rs"
