[package]
name = "keyhog-sources"
description = "keyhog-sources: pluggable input backends for KeyHog (git, S3, Docker, Web)"
version.workspace = true
authors = ["Santh Project <security@santh.dev>"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository = "https://github.com/santhsecurity/keyhog"
homepage = "https://github.com/santhsecurity/keyhog"
documentation = "https://docs.rs/keyhog-sources"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[package.metadata.santh]
status = "alpha"

[features]
default = ["git", "web"]
git = ["gix"]
# `dep:serde` / `dep:serde_json` removed from these feature gates —
# they're unconditional now (serde for the HAR parser in
# filesystem.rs::har, which is in the always-on path).
#
# `keyhog-verifier` is pulled in so the WebSource SSRF gate
# (web/ssrf.rs) delegates to the fleet-canonical IP classifier
# `keyhog_verifier::ssrf::is_private_ip_addr` instead of forking it.
# That predicate already layers the fast reserved-range checks
# (Class E, CGN, benchmark, IETF, 0.0.0.0/8, ...) on top of
# `bogon::ip_addr_is_bogon`, exactly as the bogon module docs mandate.
web = ["dep:reqwest", "dep:url", "dep:keyhog-verifier"]
github = ["dep:reqwest", "dep:tempfile"]
slack = ["dep:reqwest"]
s3 = [
    "dep:reqwest",
    "dep:quick-xml",
    "dep:urlencoding",
    "dep:hmac",
    "dep:sha2",
    "dep:hex",
    "dep:chrono",
]
# `tar` is now an unconditional dependency (used by the always-on filesystem
# tarball-unpack path), so the docker feature only needs to pull in tempfile.
docker = ["dep:tempfile"]
binary = ["dep:goblin", "dep:tempfile", "dep:glob", "dep:wait-timeout"]  # ELF/PE/Mach-O + Ghidra decompiler

[dependencies]
keyhog-core = { workspace = true }
# Canonical SSRF IP classifier lives here as `keyhog_verifier::ssrf`
# (which composes the fast reserved-range checks with
# `bogon::ip_addr_is_bogon`). Gated under `web` because only the
# WebSource SSRF guard consumes it. No dependency cycle: keyhog-verifier
# depends only on keyhog-core, never on keyhog-sources.
keyhog-verifier = { workspace = true, optional = true }
codewalk = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
# Concurrent dedup/seen-path maps in the always-on filesystem walker
# (`filesystem.rs`). Was previously only present transitively via other
# workspace members, so reduced-feature builds (e.g. `--features ci`) failed
# to resolve the `dashmap` import. Declared directly here so every feature
# combination compiles.
dashmap = { workspace = true }
gix = { workspace = true, optional = true }
memmap2 = { workspace = true }
memchr = { workspace = true }
regex = { workspace = true }
ziftsieve = { workspace = true, features = ["gzip", "lz4", "zstd", "snappy"] }
openpack = { workspace = true, features = ["zip", "apk", "ipa", "crx"] }
# True-decompression decoders for the always-on filesystem compressed-input
# path (filesystem/extract.rs). ziftsieve only extracts DEFLATE literals for
# its bloom prefilter (drops back-references), so it cannot reconstruct the
# real decompressed bytes the scanner needs — these do the full inflate.
flate2 = { workspace = true }
zstd = { workspace = true }
lz4_flex = { workspace = true }
snap = { workspace = true }
# `tar` is non-optional (NOT just the `docker` feature) because the always-on
# filesystem path untars gzip(tar)/.tgz/.tar containers per-entry so a secret
# in a tarball is scanned with the correct inner path. The `docker` feature
# reuses the same dependency.
tar = { workspace = true }
# Binary analysis dependencies
goblin = { workspace = true, optional = true }
glob = { workspace = true, optional = true }
wait-timeout = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { workspace = true }

# Feature-gated optional deps. Previously declared inside the
# `[target.cfg(target_os = "linux")]` block, which silently scoped
# them to Linux only — every `web` / `github` / `s3` / `docker` /
# `binary` build on Windows or macOS failed with `unresolved
# import reqwest`. They need to be declared at workspace scope so
# all OSes that activate the corresponding feature can resolve them.
[dependencies.reqwest]
workspace = true
optional = true
features = ["blocking"]

[dependencies.base64]
workspace = true
# Non-optional: har.rs decodes base64-encoded HAR response bodies
# (`content.encoding == "base64"`, HAR 1.2 spec) on the always-on
# filesystem path, same rationale as the unconditional serde dep below.

[dependencies.serde]
workspace = true
features = ["derive"]
# `har::HarDocument` derive uses serde unconditionally — the HAR
# expansion in filesystem.rs is part of the always-on filesystem
# source path. The `web`/`github`/`slack` features that previously
# pulled in serde optionally now share this unconditional dep.

[dependencies.serde_json]
workspace = true

[dependencies.tempfile]
workspace = true
optional = true

[dependencies.quick-xml]
workspace = true
optional = true

[dependencies.urlencoding]
workspace = true
optional = true

[dependencies.unicode-normalization]
workspace = true

# url crate is used by the WebSource SSRF filter (web.rs::is_disallowed_web_host)
# to match reqwest::Url::host() into Ipv4 / Ipv6 / Domain variants. The
# variant types are re-exported from reqwest internally but not as a
# public path, so we depend on `url` directly. Optional because only
# the `web` feature compiles the SSRF gate.
[dependencies.url]
workspace = true
optional = true

[dependencies.hmac]
workspace = true
optional = true

[dependencies.sha2]
workspace = true
optional = true

[dependencies.hex]
workspace = true
optional = true

[dependencies.chrono]
workspace = true
default-features = true
optional = true

[dev-dependencies]
flate2 = "1"
zip = "2.2"
httpmock = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
tempfile = { workspace = true }

[[test]]
name = "s3_ambient_credential_forward"
path = "tests/s3_ambient_credential_forward.rs"
required-features = ["s3"]
